19991016-03:08 EDT Paul Tucker <ptucker@sympatico.ca>
   * makefile.vc
     + source/rtl/browse.prg

19991016-08:52 GMT+1 Antonio Linares <alinares@fivetech.com>
   + source/rtl/browse.prg
     + New function Browse() added
       (early prototype. Still some missing functionality).
   * source/rtl/dummy.prg
     - function Browse() removed.
   * makefile.b32
     + added browse.prg
       (warning I have not updated other makefiles!)
   + tests/testbrdb.prg
     + New sample added.

19991016-00:10 EDT David G. Holm <dholm@jsd-llc.com>

   * doc/gmake.txt
     + Documented C_USR and -DHARBOUR_USE_<platform>_GTAPI were missing.

19991016-00:00 EDT David G. Holm <dholm@jsd-llc.com>

   * source/rtl/set.c
     ! HB_DEFPATH() (and consequently HB___DEFPATH()) now append a drive
       or path delimiter if the default path does not have one at the end.

19991015-23:25 EDT Paul Tucker <ptucker@sympatico.ca>
   * source/compiler/harbour.c
     + || defined(_MSC_VER) around isatty()
      This allows gnu make to compile harbour.exe
      It doesn't seem to affect ms make
   * doc/gmake.txt
     * updated notes regarding MSVC

19991015-23:15 EDT David G. Holm <dholm@jsd-llc.com>

   * include/set.h
   * include/set.ch
   * source/pp/table.c
   * source/rtl/set.c
   * tests/set_num.prg
   * tests/set_test.prg
     + Added missing Clipper 5.3 SETs:
          HB_SET_VIDEOMODE
          HB_SET_MBLOCKSIZE
          HB_SET_MFILEEXT
          HB_SET_STRICTREAD
          HB_SET_OPTIMIZE
          HB_SET_AUTOPEN
          HB_SET_AUTORDER
          HB_SET_AUTOSHARE
       Not knowing what their defaults should be, I defaulted the first
       two to 0, the third one to '\0', and the rest to FALSE.

19991015-22:00 EDT David G. Holm <dholm@jsd-llc.com>

   * source/rtl/inkey.c
     - Removed Windows #ifdefs from DOS-style keyboard input.
     - Removed special handling for Borland C when used with Windows.
     - Removed Cygwin from Unix-like keyboard input support.